--- a/minhaCriacao/index.html
+++ b/minhaCriacao/index.html
@@ -18,6 +18,12 @@
             <spam class ="pokemonName">Charizerd</spam>
         </h1>
         <img src="assets/gameboy.png" alt="Gameboy Color pokemom" class="pokedex">
+        <form class="form">
+            <input type="search" 
+                class="inputSearch" 
+                placeholder="Name or id"
+                required>
+        </form>
     </main>
     
 </body>
